ADD integration test

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,8 +11,10 @@ spring:
     name: nomemientas-core
   bus:
     uri: ${BUS_URI:amqp://guest:guest@localhost:5672}
-  data:
-    uri: ${MONGO_URI:mongodb://localhost:27017/queries}
+  commands:
+    uri: ${MONGO_URI:mongodb://localhost:27017/eventsNomemientas}
+  queries:
+    uri: ${MONGO_URI:mongodb://localhost:27017/queriesNomemientas}
 logging:
   pattern:
     console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
